feat: add object_path and signature type
* use type struct instead of signature variable
* add signature class for dbus signature type
* add object_path class for dbus object path type

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,6 +4,8 @@ libdbusx_private_headers = files('''
 '''.split())
 
 libdbusx_sources = files('''
+    signature.cc
+    object_path.cc
     sdbus/bus.cc
     sdbus/bus_private.cc
     sdbus/message.cc
