refactor: use tl::expected instead of exception

--- a/example/meson.build
+++ b/example/meson.build
@@ -8,5 +8,6 @@ executable(
     sources: example_sources,
     include_directories: includes,
     link_with: libdbusx,
+    dependencies: [tl_expected],
     install: true,
 )
