--- a/test/unit_tests/meson.build
+++ b/test/unit_tests/meson.build
@@ -4,7 +4,7 @@ gmock_dep = dependency('gmock', required: true)
 type_tests = executable(
     'type_tests',
     sources: [
-        'type_tests.cc',
+        'type_tests.cpp',
     ],
     include_directories: includes,
     dependencies: [gtest_dep, gmock_dep],
